Aplicação adaptada para vercel e railway

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,5 +1,14 @@
 {
+    "name": "soura/backend",
+    "description": "Soura Time Capsule Backend",
+    "type": "project",
     "require": {
+        "php": ">=7.4",
         "phpmailer/phpmailer": "^6.10"
+    },
+    "autoload": {
+        "psr-4": {
+            "Soura\\": "classes/"
+        }
     }
 }
