--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,7 +3,7 @@
     "description": "Soura Time Capsule Backend",
     "type": "project",
     "require": {
-        "php": "^8.0",
+        "php": ">=7.2",
         "phpmailer/phpmailer": "^6.10"
     },
     "autoload": {
