--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,3 +3,6 @@ cmds = ["composer install --no-dev --optimize-autoloader"]
 
 [phases.start]
 cmd = "php -S 0.0.0.0:$PORT -t ."
+
+[variables]
+PHP_VERSION = "8.2"
