adicionando configuração de mysql

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -4,7 +4,10 @@
     "type": "project",
     "require": {
         "php": "^8.2",
-        "phpmailer/phpmailer": "^6.10"
+        "phpmailer/phpmailer": "^6.10",
+        "ext-pdo": "*",
+        "ext-pdo_mysql": "*",
+        "ext-mysqli": "*"
     },
     "autoload": {
         "psr-4": {
